Fixed alignment of tasks

--- a/sass/themes/bieber.scss
+++ b/sass/themes/bieber.scss
@@ -291,6 +291,8 @@ body {
 		right: 0;
 		left: 0;
 		bottom: 0;
+		margin-top: 40px;
+		margin-left: 250px;
 		background-position: center center;
 		background-repeat: repeat;
 		background-size: cover;
